--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,87 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}Les Précieuses Timbrées{% endblock %}</title>
+        {% block stylesheets %}
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+            <link rel="stylesheet" href="{{ asset('css/style_menu.css') }}">
+
+        {% endblock %}
     </head>
     <body>
+       <header>
+       </header>
+
+       <nav>
+               <div class="logo">
+                   <img src="">
+               </div>
+               <ul>
+                   <li class="menu">
+                       <a href="#">Accueil</a>
+                       <ul class="submenu">
+                           <li><a href="#">Titre</a></li>
+                           <li><a href="#">Titre</a></li>
+                       </ul>
+                   </li>
+                   <li class="menu">
+                       <a href="#">Concept</a>
+                       <ul class="submenu">
+                           <li><a href="#">Titre</a></li>
+                           <li><a href="#">Titre</a></li>
+                       </ul>
+                   </li>
+                   <li class="menu">
+                       <a href="#">Les Stampwish</a>
+                       <ul class="submenu">
+                           <li><a href="#">Titre</a></li>
+                           <li><a href="#">Titre</a></li>
+                       </ul>
+                   </li>
+                   <li class="menu">
+                       <a href="#">Membre</a>
+                       <ul class="submenu">
+                           <li><a href="#">Titre</a></li>
+                           <li><a href="#">Titre</a></li>
+                       </ul>
+                   </li>
+                   <li class="menu">
+                       <a href="#">Partenaire</a>
+                       <ul class="submenu">
+                           <li><a href="#">Titre</a></li>
+                           <li><a href="#">Titre</a></li>
+                       </ul>
+                   </li>
+                   <li class="menu">
+                       <a href="#">Goodies</a>
+                       <ul class="submenu">
+                           <li><a href="#">Titre</a></li>
+                           <li><a href="#">Titre</a></li>
+                       </ul>
+                   </li>
+                   <li class="menu">
+                       <a href="#">Panier</a>
+                       <ul class="submenu">
+                           <li><a href="#">Titre</a></li>
+                           <li><a href="#">Titre</a></li>
+                       </ul>
+                   </li>
+                   <li class="menu">
+                       <a href="#">Contact</a>
+                   </li>
+
+               </ul>
+           </nav>
+
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+
+
+
+        {% block javascripts %}
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        {% endblock %}
     </body>
 </html>
