--- a/templates/concept/index.html.twig
+++ b/templates/concept/index.html.twig
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" href="{{ asset('css/style_menu.css') }}">
 {% endblock %}
 
+{% block title %} {{title}} {% endblock %}
+
+
 {% block body %}
    <div class="container d-flex">
         <div class="part_left col-12 col-md-8">
@@ -42,7 +45,7 @@
             </div>
                 {#  Start ACCORDEON #}
 
-                <!--Accordion wrapper-->
+                <!--Accordion wrapperr -->
             <div class="accordion md-accordion" id="accordionEx1" role="tablist" aria-multiselectable="true">
                     <!-- Accordion card -->
                 <div class="card">
