--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,8 @@
         {% block stylesheets %}
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
             <link rel="stylesheet" href="{{ asset('css/style_menu.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/style_profil.css') }}">
+
 
         {% endblock %}
     </head>
