--- a/templates/concept/index.html.twig
+++ b/templates/concept/index.html.twig
@@ -2,12 +2,12 @@
 
 {% block stylesheets %}
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="{{ asset('css/Concept.css') }}">
+	<link rel="stylesheet" href="{{ asset('css/concept.css') }}">
 	<link rel="stylesheet" href="{{ asset('css/style_menu.css') }}">
+	<link rel="stylesheet" href="{{ asset('css/all.css') }}">
 {% endblock %}
 
-{% block title %} {{title}} {% endblock %}
-
+{% block title %}{{title}}{% endblock %}
 
 {% block body %}
    <div class="container d-flex">
