--- a/templates/profil/createStampwish.html.twig
+++ b/templates/profil/createStampwish.html.twig
@@ -1,12 +1,21 @@
 {% extends "base.html.twig" %}
 
+{% block styleshet %}
+	<link rel="stylesheet" href="{{ asset('css/createStampwish.css') }}">
+{% endblock %}
+
+
 {% block body %}
     <h1 class="display-4 text-center my-4">Veuillez vous Inscrire</h1>
-    {{ form_start(form, {'attr' : {'class' : 'col-md-4 mx-auto'}})}}
-    {{ form_row(form.theme, {'label' : "Thème du Stampwish"}) }}
-    {{ form_row(form.nom_expediteur, {'label' : "Nom de l'expéditeur"}) }}
-    {{ form_row(form.nom_destinataire, {'label' : "Nom du Destinataire"}) }}
-    {{ form_row(form.adresse_destinataire, {'label' : "Adresse du Destinataire"})}}
-    <button class="btn btn-dark" type="submit">Créer un Stampwish</button>
+    {{ form_start(form, {'attr' : {'class' : 'part_all col-md-4 mx-auto'}} ) }}
+        {{ form_row(form.theme, {'attr' : {'class' : 'border border-dark'}},
+                                {'label' : "Thème du Stampwish"} ) }}
+        {{ form_row(form.nom_expediteur,    {'attr' : {'class' : 'border border-dark'}},
+                                            {'label' : "Nom de l'expéditeur"} ) }}
+        {{ form_row(form.nom_destinataire,  {'attr' : {'class' : 'border border-dark'}},
+                                            {'label' : "Nom du Destinataire"} ) }}
+        {{ form_row(form.adresse_destinataire,  {'attr' : {'class' : 'border border-dark'}},
+                                                {'label' : "Adresse du Destinataire"} ) }}
+        <button class="style_bouton btn btn-dark border border-light" type="submit"> Créer un Stampwish </button>
     {{ form_end(form)}}
 {% endblock %}
