--- a/templates/partenaire/index.html.twig
+++ b/templates/partenaire/index.html.twig
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="{{ asset('css/style_menu.css') }}">
 {% endblock %}
 
-{% block title %} Partenaire{% endblock %}
+{% block title %}{{title}}{% endblock %}
 
 {% block body %}
     <div class="container d-flex">
