--- a/templates/registration/inscription.html.twig
+++ b/templates/registration/inscription.html.twig
@@ -3,13 +3,17 @@
 {% block body %}
     <div class="inscription">
     <h1 class="display-4 text-center my-4">Veuillez vous Inscrire</h1>
-    {{ form_start(form, {'attr' : {'class' : 'col-md-4 mx-auto'}})}}
-        {{ form_row(form.username, {'label' : "Username"}) }}
-        {{ form_row(form.email, {'label' : "Email"}) }}
-
-        {{ form_row(form.password, {'label' : "Mot de passe"}) }}
-        {{ form_row(form.confirm_password, {'label' : "Confirmer votre mot de passe"})}}
-        <button class="btn btn-dark" type="submit">Inscription</button>
+    {{ form_start(form, {'attr' : {'class' : 'part_all  rounded col-md-4 mx-auto'}} ) }}
+        {{ form_row(form.username,  {'attr' : {'class' : 'border border-dark'}},   
+                                    {'label' : "Username"}) }}
+        {{ form_row(form.email, {'attr' : {'class' : 'border border-dark'}},
+                                {'label' : "Email"},
+                                {'class' : 'user_name'} ) }}
+        {{ form_row(form.password,  {'attr' : {'class' : 'border border-dark'}},
+                                    {'label' : "Mot de passe"}) }}
+        {{ form_row(form.confirm_password,  {'attr' : {'class' : 'border border-dark'}},
+                                            {'label' : "Confirmer votre mot de passe"}) }}
+        <button class="style_bouton btn btn-dark border border-light" type="submit">Inscription</button>
     {{ form_end(form)}}
     </div>
 {% endblock %}
