--- a/templates/registration/login.html.twig
+++ b/templates/registration/login.html.twig
@@ -10,18 +10,17 @@
         {# tans(error.messageData,'security') : on indique a twig que la traduction d'erreur 'Invalid credentials.' se trouve dans le ficheier 'tanslations.en.php #}
     {% endif %}
 
-    <form method="post" class="col-md-5 mx-auto" action="{{ path('security_login') }}">
+    <form method="post" class="part_all  rounded col-md-5 mx-auto" action="{{ path('security_login') }}">
         <div class="form-group">
-            <label for="_username">Email</label>
-            <input type="text" class="form-control" id="_username" name="_username"  >
-
+            <label for="_username" class="user_name">Email</label>
+            <input type="text" class="form-control border border-dark" id="_username" name="_username"  >
         </div>
         <div class="form-group">
             <label for="_password">Mot de passe</label>
-            <input type="password" class="form-control" id="_password" name="_password">
+            <input type="password" class="form-control border border-dark" id="_password" name="_password">
         </div>
-
-        <button type="submit" class="btn btn-dark">connexion</button>
+        
+        <button type="submit" class="style_bouton btn btn-dark border border-light">connexion</button>
     </form>
 
 {% endblock %}
