--- a/public/css/style_menu.css
+++ b/public/css/style_menu.css
@@ -1,74 +1,99 @@
-body{
-    font-family: 'source code pro', Calibri, Serif;
+*{
     margin: 0px;
     padding: 0px;
-}
-nav {
-    width: 100%;
-    background-color: #FFF;
-    border: 1px solid #080889;
-}
-nav > ul{
-    margin: 0px;
-    padding: 0px;
-}
-nav > ul::after{
-    content: "";
-    display: block;
-    clear: both;
-}
-nav > ul > li{
-    float: left;
-    position: relative;
-}
-nav > ul > li > a{
-    padding: 10px 30px;
-    color: #080889;
-}
-nav > ul > li:hover a{
-    padding: 8px 20px 10px 20px;
     text-decoration: none;
+    list-style: none;
+}
+
+body{
+    font-family: montserrat;
+
+}
+nav{
+    height: 80px;
+    width: 100%;
+    background: #34495e;
+}
+label.logo{
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+    padding: 0 100px;
+    line-height: 80px;
+}
+nav ul{
+    float: right;
+    margin-right: 40px;
 }
 nav li{
-    list-style-type: none;
-}
-.submenu{
-    display: none;
+    display: inline-block;
+    margin: 0 8px;
+    line-height: 80px;
 }
 nav a{
-    display: inline-block;
+    color: white;
+    font-size: 18px;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    padding: 7px 10px;
+    border-radius: 3px;
+}
+a.active,a:hover{
+    border:1px solid white;
+    transition: .5s;
     text-decoration: none;
-}
-nav li:hover .submenu{
-    display: inline-block;
-    position: absolute;
-    top: 100%;
-    left: 0px;
-    padding: 0px;
-    z-index: 1000;
-}
-.submenu li{
-    border-bottom: 1px solid #CCC;
-}
-.submenu li a{
-    padding: 15px 30px;
-    font-size: 13px;
-    color: #080889;
-    width: 270px;
-}
-.menu:hover{
-    border-bottom: 2px solid  #080889;
-;
-}
-.submenu li:hover a{
-    font-weight: bold;
 
 }
-header{
-    height: 35px;
-    background-color: #080889;
+nav #icon{
+    color: white;
+    font-size: 30px;
+    line-height: 80px;
+    float: right;
+    margin-right: 40px;
+    cursor: pointer;
+    display: none;
 }
-.logo{
-    border-radius: 4px 4px 4px 4px;
+@media (max-width: 1048px) {
+    label.logo{
+        font-size: 32px;
+        padding-left: 60px;
+    }
+    nav ul{
+        margin-right: 20px;
+    }
+    nav a{
+        font-size: 17px;
+    }
 
+}
+@media (max-width: 909px){
+    nav #icon{
+        display: block;
+    }
+    nav ul{
+        position: fixed;
+        width: 50%;
+        height: 30vh;
+        background: #2f3640;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all  .5s;
+    }
+    nav li{
+        display: block;
+        margin: 7px 0;
+        line-height: 30px;
+    }
+    nav a{
+        font-size: 10px;
+    }
+    a.active,a:hover{
+        border:none;
+        color: #3498db;
+        text-decoration: none;
+    }
+    nav ul.show{
+        left: 0;
+    }
 }
