--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,9 +29,13 @@
                    </li>
                {% endif %}
                <li><a href="#">Contact</a></li>
+               <li><a href="{{ path('cart') }}">Panier ({{ render(controller('App\\Controller\\CartController::countAndSumCart')) }})</a></li>
                {% if not app.user %}
                    <li class="nav-item">
                        <a class="nav-link" href="{{ path('security_login') }}">Connexion</a>
+                   </li>
+                   <li class="nav-item">
+                       <a class="nav-link" href="{{ path('security_registration') }}">Inscription</a>
                    </li>
                {% else %}
                    <li class="nav-item">
