--- a/templates/profil/listeGoodies.html.twig
+++ b/templates/profil/listeGoodies.html.twig
@@ -22,6 +22,9 @@
                     <p class="card-text">{{ lister.prix }}€</p>
                     <hr>
                     <p><a class="btn btn-secondary" href="{{ path('viewGoodies',{'id': lister.id}) }}" role="button">View details &raquo;</a></p>
+{#                    <li><a class="btn btn-secondary" href="{{ path('cart') }}">Ajouter au Panier({{ render(controller('App\\Controller\\CartController::countAndSumCart')) }})</a></li>#}
+
+
                 </div>
             </div>
         </div>
