--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -4,6 +4,9 @@
 
 {% block body %}
     <h3>Votre Panier</h3>
-
-
+    {% for message in app.session.flashBag.get('success') %}
+        <div class="alert alert-success" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}
 {% endblock %}
