--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
+{% block title %}{% endblock %}
 
 
 {% block body %}
-{#    <img src="{{ asset('uploads' ~ timbre.image) }}" alt="">#}
-{% endblock %}
+
+
+
+    {% endblock %}
