--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -5,16 +5,12 @@
 {% endfor %}
 <table class="table table-bordered">
     <tr>
-        <td>Prénom</td>
-        <td>{{ contact.firstname }}</td>
-    </tr>
-    <tr>
         <td>Nom</td>
-        <td>{{ contact.lastname }}</td>
+        <td>{{ contact.Nom }}</td>
     </tr>
     <tr>
-        <td>Téléphone</td>
-        <td>{{ contact.phone }}</td>
+        <td>Sujet</td>
+        <td>{{ contact.sujet }}</td>
     </tr>
     <tr>
         <td>Email</td>
