--- a/templates/profil/createStampwish.html.twig
+++ b/templates/profil/createStampwish.html.twig
@@ -1,13 +1,14 @@
 {% extends "base.html.twig" %}
 
 {% block styleshet %}
-	<link rel="stylesheet" href="{{ asset('css/createStampwish.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/createStampwish.css') }}">
 {% endblock %}
 
 
 {% block body %}
-    <h1 class="col-md-6 mx-auto text-center my-4 ">Créer votre Stampwish</h1>
-    {{ form_start(form, {'attr' : {'class' : 'part_all col-md-4 mx-auto'}} ) }}
+
+    <h1 class="col-md-8 mx-auto my-4">Créer votre Stampwish</h1>
+    {{ form_start(form, {'attr' : {'class' : 'part_all col-md-6 mx-auto'}} ) }}
         {{ form_row(form.theme, {'attr' : {'class' : 'border border-dark'}})}}
 
         {{ form_row(form.nom_expediteur,    {'attr' : {'class' : 'border border-dark'}},
@@ -18,4 +19,6 @@
                                                 {'label' : "Adresse du Destinataire"} ) }}
         <button class="style_bouton btn btn-dark border border-light" type="submit"> Créer un Stampwish </button>
     {{ form_end(form) }}
+
+
 {% endblock %}
